--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "dependencies": {
     "@artsy/fresnel": "^1.2.0",
     "@loadable/component": "^5.13.1",
+    "@next/bundle-analyzer": "^9.5.3",
+    "@zeit/next-source-maps": "0.0.3",
     "clsx": "^1.1.1",
-    "next": "^11.0.1",
+    "firebase": "^9.6.10",
+    "next": "^12.1.4",
+    "node-fetch": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-glider": "^2.0.1",
@@ -28,12 +32,11 @@
     "react-redux": "^7.2.0",
     "react-scroll": "^1.8.1",
     "react-select-search": "^2.0.4",
+    "reactfire": "^4.2.1",
     "redaxios": "^0.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "use-dark-mode": "^2.3.1",
-    "@next/bundle-analyzer": "^9.5.3",
-    "@zeit/next-source-maps": "0.0.3",
     "webpack": "^5.70.0"
   },
   "devDependencies": {
