--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "static-build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "firebase-deploy": "firebase-frameworks deploy",
+    "firebase-deploy": "firebase deploy",
     "vercel-deploy": "vercel --prod",
     "netlify-deploy": "npm run static-build && netlify deploy --prod --dir=out",
     "analyze": "cross-env ANALYZE=true next build",
